--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
+    h1 {
+      color: white;
+    }
+    
     h1, h2, h3 {
       color: #003366;
     }
