--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
+    header strong {
+      color: white; 
+    }
+    
     h1 {
       color: white;
     }
@@ -44,6 +48,10 @@
       padding-bottom: 10px;
     }
 
+    strong {
+      color: #002244; /* keep strong dark blue everywhere else */
+    }
+    
     ul {
       padding-left: 20px;
     }
