--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     h1 {
       color: white;
     }
-    
+
     h2, h3 {
       color: #003366;
     }
@@ -49,9 +49,9 @@
     }
 
     strong {
-      color: #002244; /* keep strong dark blue everywhere else */
+      color: #002244; 
     }
-    
+
     ul {
       padding-left: 20px;
     }
