--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
   <header>
-    <h1>Revistă Online – Online Tech Magazine</h1>
+    <h1>Revista Online – Online Tech Magazine</h1>
     <p><strong>Author:</strong> Tint Sabei Soe Win | <strong>Group:</strong> 232</p>
   </header>
 
