--- a/index.html
+++ b/index.html
@@ -156,22 +156,7 @@
     <img src="https://github.com/user-attachments/assets/46af370e-1a30-4e0f-8546-eded61ce81e0" alt="Class Diagram" />
 
     <h3>2. Use case diagram (actors and main use cases)</h3>
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    <img src="https://github.com/user-attachments/assets/6600a5ab-886d-4243-8b71-fc5da208a80e" alt="Use Case Diagram" />
 
     <h3>3. Sequence diagram — Login flow</h3>
     <img src="https://github.com/user-attachments/assets/098481a1-83e9-48d4-ad26-0987198e70e0" alt="Login Flow" />
